syntax = "proto3";
package tessornetwork.fury.vbr;

// Options section
option go_package = "github.com/tessornetwork/fury/x/vbr/types";

// Import section
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "fury/vbr/params.proto";

// Query defines the gRPC querier service.
service Query {
    rpc GetBlockRewardsPoolFunds(QueryGetBlockRewardsPoolFundsRequest) returns (QueryGetBlockRewardsPoolFundsResponse) {
		option (google.api.http).get = "/fury/vbr/funds";
	}

	rpc GetParams(QueryGetParamsRequest) returns (QueryGetParamsResponse){
		option (google.api.http).get = "/fury/vbr/params";
	}
}

message QueryGetBlockRewardsPoolFundsRequest {
}

message QueryGetBlockRewardsPoolFundsResponse {
	repeated cosmos.base.v1beta1.DecCoin funds = 1 [(gogoproto.moretags) = "yaml:\"funds\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false] ;
}

message QueryGetParamsRequest {
}

message QueryGetParamsResponse{
	Params params = 1 [(gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false]; 
}